# Win-Ai

./: .gitignore  README.md  build.ps1  instructions.md  mcp_client.py  mcp_log.txt
win_mcp/: Cargo.toml
win_mcp/src/: executor.rs  gui.rs  inspector.rs  main.rs  vision.rs
