[package]
name = "win_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
base64 = "0.22"
mcp_rust_sdk = "0.1.1"
async-trait = "0.1"
interception = "0.1"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
]
